--- a/TypingGame/TypingGameUI/MainWindow.xaml
+++ b/TypingGame/TypingGameUI/MainWindow.xaml
@@ -2,14 +2,38 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
-    <StackPanel Orientation="Vertical">
-        <Button Name="NewTextButton" Click="NewTextButton_Click">New Text</Button>
-        <RichTextBox 
-            Name="mainTextBox"
-            PreviewKeyDown="mainTextBox_PreviewKeyDown"
-            KeyDown="mainTextBox_KeyDown"
-                     >
-            
-        </RichTextBox>
-    </StackPanel>
+    <DockPanel LastChildFill="True">
+        <Button Name="NewTextButton" Click="NewTextButton_Click" DockPanel.Dock="Top">New Text</Button>
+        <ListBox Name="mainTextBox">
+            <TextBlock>Abc</TextBlock>
+            <RichTextBox
+                Name="enterTextBox"
+                KeyDown="enterTextBox_KeyDown"
+                TextChanged="enterTextBox_TextChanged"
+                >
+                <FlowDocument Name="flowDoc" PageWidth="{Binding ElementName=enterTextBox, Path=ActualWidth}" />
+            </RichTextBox>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+            <TextBlock>DEF</TextBlock>
+        </ListBox>
+    </DockPanel>
 </Window>
